--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	body {
+		@apply bg-dark-primary text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
+	}
+
+	header {
+		@apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4 transition-all lg:px-10 lg:py-6;
+	}
+}
